k8s/neuronpedia/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    apiVersion: v1
    kind: Service
    metadata:
      annotations: {}
      name: neuronpedia-webapp-service
      namespace: neuronpedia
    spec:
      ports:
      - port: 3000
        targetPort: 3000
      selector:
        app: neuronpedia-webapp
      type: ClusterIP
  name: neuronpedia-webapp-service
  namespace: neuronpedia
spec:
  clusterIP: 10.152.183.228
  clusterIPs:
  - 10.152.183.228
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: neuronpedia-webapp
  sessionAffinity: None
  type: ClusterIP
