k8s/neuronpedia/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
  name: neuronpedia-ingress
  namespace: neuronpedia
spec:
  ingressClassName: public
  rules:
  - host: k8s-neuron.hitsai.local
    http:
      paths:
      - backend:
          service:
            name: neuronpedia-webapp-service
            port:
              number: 3000
        path: /
        pathType: Prefix
